# goto-cp312

./: .gitignore  .pdm-python  LICENSE.txt  README.md  pyproject.toml
.github/workflows/: build.yml
src/goto/: __init__.py  _constants.py  _goto.py
tests/: test_main.py
